refactor : 리팩토링 참조용 (브랜치 폐기)